<resources>
    <string name="app_name">Driving Exam</string>

    <string name="facebook_app_id">234234234234324</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="applovin_id">F9VAb231d3sd2d328JB0k-qedqwd3dd13sdf1d2s3</string>

    <string name="onesignal_app_id">xxxxxxxx-xxxxx-xxxxx-xxxxx-xxxxxxxx</string>

    <string name="made_with_in">Made With ❤ in Sri Lanka</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Navigation drawer -->
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>

    <string name="language">Language</string>
    <string name="road_signs">Road Signs</string>
    <string name="exam_questions">Exam Questions</string>


    <!--Login/Register -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="logout_success">Logout Successful</string>
    <string name="new_to_logistics">New to Logistics?</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="registering">Registering..</string>
    <string name="full_name">Full name</string>
    <string name="telephone_number">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="by_signing_up_re_agree_to_oue">By signing up,re agree to oue</string>
    <string name="and">and</string>
    <string name="skip">Skip</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--Forgot Password-->
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>

    <!--Profile-->
    <string name="profile">Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="sure_delete_account">Are you sure you want to delete this Account?</string>
    <string name="not_log">Not Logged In</string>

    <!--MSG-->
    <string name="error_name">Please Enter Name</string>
    <string name="error_email">Please Enter Email</string>
    <string name="error_password">Please Enter Password</string>
    <string name="error_cpassword">Please Enter Confirm Password</string>
    <string name="error_pass_not_match">Confirm Password not matched</string>
    <string name="error_pass_end_space">Please do not add space at end</string>
    <string name="error_password_sort">This password is too shor</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_phone">Enter Phone</string>
    <string name="error_gender">Selected gender</string>
    <string name="error_cannot_use_features">Cannot use some of the features without requested permission</string>
    <string name="error_cannot_empty">Field cannot be empty</string>
    <string name="error_internet_not_connected">Please connect to internet</string>
    <string name="error_try_internet_connected">Please connect to internet and try again</string>
    <string name="error_server_not_connected">Server not connected</string>
    <string name="error_server">Server Error</string>
    <string name="error_unauthorized_access">Unauthorized Access</string>
    <string name="error_login_google">Error while login with google</string>
    <string name="select_image">Select Image</string>
    <string name="error_no_data_found">No Data Found</string>
    <string name="no_notification">No Notification</string>
    <string name="try_again">Try Again</string>

    <!--About-->
    <string name="about">About Us</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="love_this_app">Love this app? Let us Know in the Google Play Store how we can make it even better</string>
    <string name="share_the_app">Share the app with your friends and family</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="version">Version</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>

    <!--Settings-->
    <string name="settings">Settings</string>
    <string name="app_theme">App Theme</string>
    <string name="dark_or_light_mode">Dark or Light Mode</string>
    <string name="theme_classic">Classic</string>
    <string name="theme_dark_grey">Dark Grey</string>
    <string name="theme_dark_blue">Dark Blue</string>
    <string name="theme_dark">Dark</string>
    <string name="cache">Cache</string>
    <string name="clear_cache">Clear cache data</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="clearing_cache">Clearing Cache..</string>
    <string name="this_app_privacy_policy">This app privacy policy</string>
    <string name="social_links">Social links, policy</string>
    <string name="enable_push_notification">Enable Push Notification</string>
    <string name="on_off_notification">On/off Notification</string>
    <string name="this_app_terms">This app Terms and Conditions</string>

    <!--Dialog-->
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="exit">Exit</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="invalid_user">Invalid User</string>
    <string name="sure_exit">Are you sure you want to exit app?</string>

    <string name="upgrade">Upgrade</string>
    <string name="its_time_to_upgrade">Its time to Upgrade to the latest version of our application to get the best experience.</string>
    <string name="do_it_now">DO IT NOW</string>
    <string name="maintenance">Maintenance</string>
    <string name="temporarily_down_for_maintenance">Temporarily Down for Maintenance</string>
    <string name="we_are_performing_scheduled">we are performing scheduled maintenance. we should be back online shortly.</string>
    <string name="try_again_later">Try again later</string>

    <!--Feedback-->
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="report_any_issues">Report any issues you may have en countered with the app content or its functionality.</string>
    <string name="please_describe_the_problem">Please describe the problem…</string>
    <string name="submit">Submit</string>

    <!-- Results -->
    <string name="results">Results</string>
    <string name="_01">(01)</string>
    <string name="not_answered">not answered</string>
    <string name="no_entry_on_event_days">No entry on event days</string>
    <string name="no_overtaking">No overtaking</string>
    <string name="no_parking_on_even_days">No parking on even days</string>
    <string name="no_waiting_on_even_days">No waiting on even days</string>

    <string name="sure_quit">Are you sure you want to quit?</string>
    <string name="quit">Quit</string>

    <!--Don't Change language-->
    <string name="todo">TODO</string>
</resources>