<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="?colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_menu_black"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/ToolbarTextAppearanceNormal"
        app:titleTextColor="?colorBackgroundTint" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:id="@+id/iv_notifications"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/bar_selector"
            android:contentDescription="@string/todo"
            android:padding="@dimen/_7sdp"
            android:src="@drawable/ic_notifications"
            app:tint="?colorBackgroundTint" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_adView"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_7sdp"
                android:orientation="vertical"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_2sdp"
                app:cardBackgroundColor="?colorSubBackground">

                <LinearLayout
                    android:background="?colorSubBackground"
                    android:id="@+id/ll_questions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_160sdp"
                        android:contentDescription="@string/todo"
                        android:scaleType="centerCrop"
                        android:src="@drawable/driving" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/exam_questions"
                        android:textAlignment="center"
                        android:textColor="?attr/colorTitle"
                        android:textSize="@dimen/_14ssp" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/ll_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="50"
                    android:orientation="vertical"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardBackgroundColor="?colorSubBackground">

                    <LinearLayout
                        android:background="?colorSubBackground"
                        android:id="@+id/ll_signs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_140sdp"
                            android:contentDescription="@string/todo"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cover_road_signs" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/road_signs"
                            android:textAlignment="center"
                            android:textColor="?colorTitle"
                            android:textSize="@dimen/_14ssp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="50"
                    android:orientation="vertical"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardBackgroundColor="?colorSubBackground">

                    <LinearLayout
                        android:background="?colorSubBackground"
                        android:id="@+id/ll_exam"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_140sdp"
                            android:contentDescription="@string/todo"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cover_questions" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/app_name"
                            android:textAlignment="center"
                            android:textColor="?colorTitle"
                            android:textSize="@dimen/_14ssp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/btn_result"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/bg_btn"
                android:text="@string/results"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/ll_adView"
        android:background="?colorBackground"
        android:backgroundTint="?colorBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>