<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResultsActivity"
    android:background="?colorBackground"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorBackground"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleTextColor="?colorBackgroundTint" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_alignBottom="@+id/toolbar"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/bar_selector"
            android:contentDescription="@string/todo"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_close_all"
            app:tint="?colorBackgroundTint" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_results_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Normal"
                    android:textAlignment="textStart"
                    android:textColor="@color/color_check_in"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/bg_card"
                    android:backgroundTint="?colorBorder"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/results"
                        android:textAlignment="textStart"
                        android:textColor="?colorTitle"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/iv_cont_pa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="100.0%"
                        android:textAlignment="textStart"
                        android:textColor="@color/color_check_error"
                        android:textSize="@dimen/_23ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/iv_cont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        android:text="0/40"
                        android:textAlignment="textStart"
                        android:textColor="?colorTitle"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>